--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
    <section class="mission">
        <div class="half ">
-           <h1>Stay Focused on</h1>
-           <h1><span class="diffrent-color">Mission 2022</span></h1>
+          <div>
+            <h1>Stay Focused on</h1>
+            <h1><span class="diffrent-color">Mission 2022</span></h1>
+          </div>
            <p>Starting 2022 I decide to know and learn something that is cryptocurrency metaverse and programming. I am curious to know about cryptocurrency and the metaverse and how it works.One of my hopes for programming is starting right now with the programming hero team .
         </p><br>
         <a class="switch" target="_blanck" href="">Explore Now</a><br><br>
