--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    <section class="mission">
        <div class="half ">
-          <div>
+          <div id="bambo">
             <h1>Stay Focused on</h1>
             <h1><span class="diffrent-color">Mission 2022</span></h1>
           </div>
@@ -60,28 +60,25 @@
        <div class="half">
            <h1>Develop</h1>
            <h1> Without Limits</h1>
-           <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An
-            mundi noster pri, ea eos quas expetendis scripserit, affert gubergren
-            dissentias et cum.</p>
+           <p>Development Without Limits is an organization that works to develop curriculum with after school and summer programs in order to promote the high-quality and effective learning through tailoring programs to be engaging and and dynamic for students.By providing resources and on-site training, Development Without Limits caters to the unique needs of each organization to enhance learning experiences. </p>
             <br><br>
             <a class="switch" target="_blanck" href="">Read the Documentation</a>
             
        </div>
    </section >
    <section class="mission-foure">
-       <div class="half">
+      <div class="half">
         <h1>Know our </h1>
         <h1>Global Community</h1>
         <p>Starting 2022 I decide to know and learn something that is cryptocurrency metaverse and programming. I am curious to know about cryptocurrency and the metaverse and how it works.One of my hopes for programming is starting right now with the programming hero team .</p>
         <br><br>
-     <a class="switch" target="_blanck" href="">Read the Documentation</a>
-       </div>
-       <div class="half">
-           <img src="images/pictures/project.png" alt="">
-       </div>
+        <a class="switch" target="_blanck" href="">Read the Documentation</a>
+      </div>
+      <div class="half">
+        <img src="images/pictures/project.png" alt="">
+      </div>
    </section>
-   <p class="ero-non">Build <span class="diffrent-color">Covid 19 Vaccine Application</span></p>
+        <p class="ero-non">Build <span class="diffrent-color">Covid 19 Vaccine Application</span></p>
    <section class="missoin-five">
        <div class="half">
            <img src="covid.jpg" alt="">
